k3s-cilium-policies-custom/03-frontend-backend-to-db.yaml

apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-apps-to-db
  namespace: database
spec:
  endpointSelector:
    matchLabels:
      app: mysql
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: frontend
        - matchLabels:
            app: backend
      toPorts:
        - ports:
            - port: "3306"
              protocol: TCP
