k3s-cilium-policies-custom/05-allow-prometheus-egress.yaml

apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-prometheus-egress
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      app: prometheus
  egress:
    - toEntities:
        - cluster
